--- a/index2.html
+++ b/index2.html
@@ -176,7 +176,7 @@
     <!-- Улучшенная кнопка -->
     <div class="next-button">
         <div class="pulse-effect"></div>
-        <a href="./index3.html">
+        <a href="./ofa.html">
             <span>Переход к тесту про Джо Дассен</span>
             <i class="fas fa-arrow-right"></i>
         </a>
@@ -379,4 +379,5 @@
         });
     </script>
 </body>
+
 </html>
