--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
         <!-- Результат и переход на следующую страницу -->
         <div class="result-container" id="finalResult">
             <div class="result-content">
-                <h2><i class="fas fa-trophy"></i> Результаты викторины</h2>
+                <h2>Результаты викторины</h2>
                 <div class="score-display">
                     <div class="score-circle">
                         <span id="totalScore">0</span>
                         <span class="score-label">баллов</span>
                     </div>
                     <div class="score-text">
-                        <p>Вы набрали <span id="scoreOutOf">0</span> из 7 возможных баллов</p>
+                        <p>Вы набрали <span id="scoreOutOf">0</span> возможных баллов</p>
                         <div class="score-message" id="scoreMessage"></div>
                     </div>
                 </div>
